--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ numpy = "~=2.2"
 pandas = "~=2.2"
 scipy = "~=1.15"
 
+[tool.poetry.dev-dependencies]
+autopep8 = "^1.5.7"
+ruff = "~=0.9.7"
+pyright = "~=1.1.394"
 
 [build-system]
 requires = ["poetry-core"]
